# Online-shop

./: Makefile  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: auth_admin.py  auth_user.py  cart.py  categories.py  order_items.py  orders.py  products.py  promotions.py  reviews.py  user_profile.py
backend/app/db/: mongo.py  postgres.py  redis.py
backend/app/dependencies/: auth.py
backend/app/models/: postgres_models.py
backend/app/schemas/: admin.py  cart.py  category.py  order.py  order_item.py  product.py  promotion.py  review.py  user.py  user_profile.py
backend/tests/: .env  auth_admin.http  auth_user.http  cart.http  categories.http  order_items.http  orders.http  products.http  profile.http  promotions.http  reviews.http
